--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -146,11 +146,11 @@
   "input.repeat.password.label": "Repeat password",
   "input.repeat.password.placeholder": "Repeat password",
   "input.residence.permit.back.description": "Back photo of my residence permit",
-  "input.residence.permit.back.header": "Residence permit  (back photo)",
-  "input.residence.permit.back.label": "Residence permit",
+  "input.residence.permit.back.header": "Residence permit",
+  "input.residence.permit.back.label": "Residence permit (back photo)",
   "input.residence.permit.front.description": "Front photo of my residence permit",
-  "input.residence.permit.front.header": "Residence permit (front photo)",
-  "input.residence.permit.front.label": "Residence permit",
+  "input.residence.permit.front.header": "Residence permit",
+  "input.residence.permit.front.label": "Residence permit (front photo)",
   "input.resume.header": "Resumé",
   "input.resume.label": "Resumé",
   "input.resume.subheader": "Previously uploaded resumés",
@@ -170,11 +170,11 @@
   "input.system.language.placeholder": "Default language",
   "input.terms.label": "I accept Just Arrived's terms, conditions and employment contract",
   "input.work.permit.back.description": "Back photo of my work permit",
-  "input.work.permit.back.header": "Work permit  (back photo)",
-  "input.work.permit.back.label": "Work permit",
+  "input.work.permit.back.header": "Work permit",
+  "input.work.permit.back.label": "Work permit (back photo)",
   "input.work.permit.front.description": "Front photo of my work permit",
-  "input.work.permit.front.header": "Work permit  (front photo)",
-  "input.work.permit.front.label": "Work permit",
+  "input.work.permit.front.header": "Work permit",
+  "input.work.permit.front.label": "Work permit (front photo)",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
   "job.card.currency.per.hour": "{{currency}}/hour",
