Pull translations from Transifex

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -118,7 +118,7 @@
   "input.first.name.placeholder": "First name",
   "input.gender.label": "Gender",
   "input.gender.placeholder": "Gender",
-  "input.got.coordination.number.label": "Do yoo have a coordination number (samordningsnummmer)?",
+  "input.got.coordination.number.label": "Do you have a coordination number (samordningsnummmer)?",
   "input.job.experience.label": "Work experience",
   "input.job.experience.placeholder": "Work experience",
   "input.languages.label": "Language skills",
@@ -208,7 +208,7 @@
   "menu.main.logout": "Log out",
   "menu.main.my_assignment": "My jobs",
   "menu.main.profile": "Profile",
-  "menu.main.register": "Create user",
+  "menu.main.register": "Create account",
   "menu.main.staffing_time_report": "Time report",
   "page.not.found.error.description": "Sorry, the page you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
