Pull translations from Transifex

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -41,7 +41,7 @@
   "common.yes": "نعم",
   "company.assignments.filter_1": "وظيفة",
   "company.assignments.filter_2": "الأرشيف",
-  "component.loading": "Loading..",
+  "component.loading": "جار التحميل...",
   "confirmation.applied.for.job.button": "جِد عدة وظائف",
   "confirmation.applied.for.job.description": "نحن ضمن وصلتُ لتوّي ننتظر بشغف  إذا أرسل مستلم الوظيفة عرض عندك 18 ساعة لتوافق على الوظيفة تجد الوظيفة تحت خانة وظائفي حيث توجد كل المكالمات بينك وبين مانح الوظيفة",
   "confirmation.applied.for.job.title": "لقد تقدمت لهذه الوظيفة.",
