Design updates on home page. refactoring left

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -90,6 +90,7 @@
   "home.jobs.applied.for.title": "Jobs applied for",
   "home.jobs.slider.new.jobs.title": "New jobs",
   "home.jobs.slider.show.all.link": "Show all",
+  "home.jobs.slider.user.jobs.job.applied.label": "Applied",
   "home.jobs.slider.user.jobs.job.ended.label": "Finished",
   "home.jobs.slider.user.jobs.title": "My jobs",
   "home.jobs.slider.user.jobs.will.perform.job.label": "Ongoing",
