Update cookie notice

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,7 +58,7 @@
   "contact.form.submit.button": "Send",
   "contact.title": "Contact",
   "cookies.accept.button": "Accept",
-  "cookies.description": "By using the justarrived app, you agree to the use of cookies by us and third parties to enhance your experience.",
+  "cookies.description": "By using the Just Arrived application, you agree to the use of cookies by us and third parties to enhance your experience.",
   "cookies.info.description": "We use cookies for technical reasons to simplify the use of our services and to give you the user more relevant information when your visit our website. Cookies are also used to measure traffic to our website, for the collection of data and to improve our services. By using our services, you accept that we use cookies, as long as you have not disabled them in your cookies settings in your web browser.",
   "cookies.info.title": "About cookies",
   "cookies.read_more": "More about Cookies",
