Update SV translation from Transifex

--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -229,7 +229,7 @@
   "user.profile.form.education.section.header": "Utbildning",
   "user.profile.form.general.skills.section.header": "Generella kompetenser",
   "user.profile.form.language.skills.section.header": "Språkkunskaper",
-  "user.profile.form.personal.presentation.section.header": "Personlig presentatio",
+  "user.profile.form.personal.presentation.section.header": "Personlig presentation",
   "user.profile.form.status.section.header": "Status",
   "user.profile.form.submit.button": "Spara ändringar",
   "user.profile.form.work.experience.section.header": "Arbetslivserfarenhet",
