home page fully refactored

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -92,6 +92,7 @@
   "home.jobs.slider.show.all.link": "Show all",
   "home.jobs.slider.user.jobs.job.applied.label": "Applied",
   "home.jobs.slider.user.jobs.job.ended.label": "Finished",
+  "home.jobs.slider.user.jobs.job.offered.label": "Offered",
   "home.jobs.slider.user.jobs.title": "My jobs",
   "home.jobs.slider.user.jobs.will.perform.job.label": "Ongoing",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
