Refactoring of models progressing

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
   "applications.title": "Just Arrived",
   "assignment.after_tax": "after tax",
   "assignment.assignments.title": "Job",
-  "assignment.comments.title": "Comment on the job",
+  "assignment.comments.title": "Comments on the job",
   "assignment.details": "Job details",
   "assignment.hours": "Hours",
   "assignment.rate.gross_salary": "gross salary",
