--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "common.close": "Close",
   "applications.title": "Just Arrived",
   "assignment.after_tax": "after tax",
   "assignment.assignments.title": "Job",
@@ -46,7 +47,8 @@
   "confirmation.applied.for.job.description": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
   "confirmation.applied.for.job.title": "You have applied for the job",
   "confirmation.contact.button": "Back to contact",
-  "confirmation.contact.title": "Thanks for your message! We will reply as soon as we can.",
+  "confirmation.contact.title": "Thanks for your message!",
+  "confirmation.contact.description": "We will reply as soon as we can.",
   "confirmation.password.reset.button": "Sign in",
   "confirmation.password.reset.description": "You can now sign in using your new password.",
   "confirmation.password.reset.link.button": "Back",
