Added modals for apply for job steps

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,13 @@
 {
   "common.close": "Close",
+  "input.apply.message.label": "Additonal message",
+  "input.apply.message.placeholder": "Additonal message",
+  "input.frilans.terms.label": "I accept Frilans Finans terms of employment",
+  "input.frilans.terms.link": "Frilans Finans terms of employment",
+  "job.additional.user.info.modal.button": "Continue",
+  "job.additional.user.info.modal.title": "To apply for this job we need some additional information about you.",
+  "apply.for.job.modal.button": "Apply",
+  "apply.for.job.modal.title": "Anything else you want us to know?",
   "applications.title": "Just Arrived",
   "assignment.after_tax": "after tax",
   "assignment.assignments.title": "Job",
@@ -236,6 +244,13 @@
   "user.profile.form.status.section.header": "Status",
   "user.profile.form.submit.button": "Save changes",
   "user.profile.form.work.experience.section.header": "Work experience",
+  "user.update.form.education.section.header": "Education",
+  "user.update.form.general.skills.section.header": "General skills",
+  "user.update.form.language.skills.section.header": "Language skills",
+  "user.update.form.personal.presentation.section.header": "Personal presentation",
+  "user.update.form.status.section.header": "Status",
+  "user.update.form.submit.button": "Save changes",
+  "user.profile.form.work.experience.section.header": "Work experience",
   "user.profile.header.information": "Remember that a complete profile increases your chances of getting jobs",
   "user.profile.header.title": "Profile",
   "user.profile.tab.personal.details.title": "Personal",
@@ -243,6 +258,9 @@
   "user.register.form.address.section.header": "Address",
   "user.register.form.general.information.section.header": "General information",
   "user.register.form.password.section.header": "Password",
+  "user.register.form.settings.section.header": "Settings",
+  "user.register.form.address.section.header": "Address",
+  "user.register.form.general.information.section.header": "General information",
   "user.register.form.settings.section.header": "Settings",
   "user.register.form.submit.button": "Sign up",
   "user.register.form.terms.section.header": "Terms and conditions",
@@ -252,6 +270,10 @@
   "user.settings.form.change.password.header": "Change password",
   "user.settings.form.personal.info.header": "Personal information",
   "user.settings.form.settings.header": "Settings",
+  "user.update.form.address.header": "Address",
+  "user.update.form.bank.details.header": "Bank details",
+  "user.update.form.personal.info.header": "Personal information",
+  "user.update.form.settings.header": "Settings",
   "user.settings.form.submit.button": "Save changes",
   "validations.email_pattern": "must look like an email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
