--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,14 +1,7 @@
 {
-  "common.close": "Close",
-  "input.apply.message.label": "Additonal message",
-  "input.apply.message.placeholder": "Additonal message",
-  "input.frilans.terms.label": "I accept Frilans Finans terms of employment",
-  "input.frilans.terms.link": "Frilans Finans terms of employment",
-  "job.additional.user.info.modal.button": "Continue",
-  "job.additional.user.info.modal.title": "To apply for this job we need some additional information about you.",
+  "applications.title": "Just Arrived",
   "apply.for.job.modal.button": "Apply",
   "apply.for.job.modal.title": "Anything else you want us to know?",
-  "applications.title": "Just Arrived",
   "assignment.after_tax": "after tax",
   "assignment.assignments.title": "Job",
   "assignment.comments.title": "Comments on the job",
@@ -36,6 +29,7 @@
   "button.form.submit.success": "Success!",
   "card.document.upload.empty.documents": "Empty",
   "common.back": "Back",
+  "common.close": "Close",
   "common.congratulation": "Congratulations!",
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "common.find_assignment": "Find jobs",
@@ -55,8 +49,8 @@
   "confirmation.applied.for.job.description": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
   "confirmation.applied.for.job.title": "You have applied for the job",
   "confirmation.contact.button": "Back to contact",
-  "confirmation.contact.title": "Thanks for your message!",
   "confirmation.contact.description": "We will reply as soon as we can.",
+  "confirmation.contact.title": "Thanks for your message!",
   "confirmation.password.reset.button": "Sign in",
   "confirmation.password.reset.description": "You can now sign in using your new password.",
   "confirmation.password.reset.link.button": "Back",
@@ -109,6 +103,8 @@
   "home.partners.title": "Our partners",
   "input.account.number.label": "Account number",
   "input.account.number.placeholder": "Account number",
+  "input.apply.message.label": "Additonal message",
+  "input.apply.message.placeholder": "Additonal message",
   "input.at.und.label": "Do you have an AT-UND permit? (Allowed to work during asylum)",
   "input.city.label": "City",
   "input.city.placeholder": "City",
@@ -128,6 +124,8 @@
   "input.email.placeholder": "Email",
   "input.first.name.label": "First name",
   "input.first.name.placeholder": "First name",
+  "input.frilans.terms.label": "I accept Frilans Finans terms of employment",
+  "input.frilans.terms.link": "Frilans Finans terms of employment",
   "input.gender.label": "Gender",
   "input.gender.placeholder": "Gender",
   "input.got.coordination.number.label": "Do you have a coordination number (samordningsnummmer)?",
@@ -189,6 +187,8 @@
   "input.work.permit.front.label": "Work permit (front photo)",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
+  "job.additional.user.info.modal.button": "Continue",
+  "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.card.currency.per.hour": "{{currency}}/hour",
   "job.card.hours": "{{hours}} hours",
   "jobs.list.job_hours_and_hourly_salary": "{{hours}}h ({{hourlySalary}})",
@@ -244,23 +244,17 @@
   "user.profile.form.status.section.header": "Status",
   "user.profile.form.submit.button": "Save changes",
   "user.profile.form.work.experience.section.header": "Work experience",
-  "user.update.form.education.section.header": "Education",
-  "user.update.form.general.skills.section.header": "General skills",
-  "user.update.form.language.skills.section.header": "Language skills",
-  "user.update.form.personal.presentation.section.header": "Personal presentation",
-  "user.update.form.status.section.header": "Status",
-  "user.update.form.submit.button": "Save changes",
   "user.profile.form.work.experience.section.header": "Work experience",
   "user.profile.header.information": "Remember that a complete profile increases your chances of getting jobs",
   "user.profile.header.title": "Profile",
   "user.profile.tab.personal.details.title": "Personal",
   "user.profile.tab.profile.details.title": "Profile",
   "user.register.form.address.section.header": "Address",
+  "user.register.form.address.section.header": "Address",
+  "user.register.form.general.information.section.header": "General information",
   "user.register.form.general.information.section.header": "General information",
   "user.register.form.password.section.header": "Password",
   "user.register.form.settings.section.header": "Settings",
-  "user.register.form.address.section.header": "Address",
-  "user.register.form.general.information.section.header": "General information",
   "user.register.form.settings.section.header": "Settings",
   "user.register.form.submit.button": "Sign up",
   "user.register.form.terms.section.header": "Terms and conditions",
@@ -270,11 +264,17 @@
   "user.settings.form.change.password.header": "Change password",
   "user.settings.form.personal.info.header": "Personal information",
   "user.settings.form.settings.header": "Settings",
+  "user.settings.form.submit.button": "Save changes",
   "user.update.form.address.header": "Address",
   "user.update.form.bank.details.header": "Bank details",
+  "user.update.form.education.section.header": "Education",
+  "user.update.form.general.skills.section.header": "General skills",
+  "user.update.form.language.skills.section.header": "Language skills",
   "user.update.form.personal.info.header": "Personal information",
+  "user.update.form.personal.presentation.section.header": "Personal presentation",
   "user.update.form.settings.header": "Settings",
-  "user.settings.form.submit.button": "Save changes",
+  "user.update.form.status.section.header": "Status",
+  "user.update.form.submit.button": "Save changes",
   "validations.email_pattern": "must look like an email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
