Handle 404 and 403 errors from the api

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -70,6 +70,8 @@
   "error.title": "An error occured!",
   "faq.answer.label": "Answers",
   "faq.title": "Questions and answers",
+  "forbidden.error.description": "Sorry, you’re not allowed to perform that action.",
+  "forbidden.error.title": "Forbidden",
   "forgot.password.login.link": "Sign in",
   "forgot.password.submit.error": "Unfortunately, a password reset link could not be sent.",
   "forgot.password.title": "Restore password",
@@ -222,7 +224,7 @@
   "menu.main.profile": "Profile",
   "menu.main.register": "Create account",
   "menu.main.staffing_time_report": "Time report",
-  "page.not.found.error.description": "Sorry, the page you are looking for does not exist.",
+  "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
