confirm job modals

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "applications.title": "Just Arrived",
+  "apply.for.job.form.submit.button": "Apply",
   "apply.for.job.modal.button": "Apply",
   "apply.for.job.modal.title": "Anything else you want us to know?",
   "assignment.after_tax": "after tax",
@@ -19,7 +20,7 @@
   "assignment.status.hired": "Hired",
   "assignment.status.log_in": "Log in to apply",
   "assignment.status.more_details": "For more details",
-  "assignment.status.offer.approve": "Would you still like to perform the assignment and can you commit to do so?",
+  "assignment.status.offer.approve": "Would you still like to perform the job and can you commit to do so?",
   "assignment.status.offer": "You have received an offer to do this job. Answer within",
   "assignment.status.performed": "Job performed",
   "assignment.status.reply": "Accept offer",
@@ -57,6 +58,8 @@
   "confirmation.password.reset.link.description": "If you follow the link provided in the message you can thereafter set a new password.",
   "confirmation.password.reset.link.title": "A password reset message has been sent to you!",
   "confirmation.password.reset.title": "Successfully changed your password!",
+  "confirmation.signed.for.job.description": "Just Arrived will be in touch as soon as possible so don't forget to answer your phone and check your emails",
+  "confirmation.signed.for.job.title": "We believe in you! Just Arrived is confident that you will perform this job exceptionally!",
   "contact.form.description": "Questions? Thoughts? We'd love to help!",
   "contact.form.instruction": "Enter your details below.",
   "contact.form.submit.button": "Send",
@@ -100,7 +103,7 @@
   "home.jobs.slider.user.jobs.job.ended.label": "Finished",
   "home.jobs.slider.user.jobs.job.offered.label": "Offered",
   "home.jobs.slider.user.jobs.title": "My jobs",
-  "home.jobs.slider.user.jobs.will.perform.job.label": "Ongoing",
+  "home.jobs.slider.user.jobs.will.perform.job.label": "Hired",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Our partners",
   "input.account.number.label": "Account number",
@@ -133,6 +136,7 @@
   "input.got.coordination.number.label": "Do you have a coordination number (samordningsnummmer)?",
   "input.job.experience.label": "Work experience",
   "input.job.experience.placeholder": "Work experience",
+  "input.languages.hint": "Please rate how good you are at the chosen languages",
   "input.languages.label": "Language skills",
   "input.languages.placeholder": "Language skills",
   "input.last.name.label": "Last name",
@@ -169,6 +173,7 @@
   "input.skatteverket.certificate.description": "Photo of my coordination number certificate (from the swedish tax agency)",
   "input.skatteverket.certificate.header": "Coordination number certificate",
   "input.skatteverket.certificate.label": "Coordination number certificate",
+  "input.skills.hint": "Please rate how good you are at the chosen skills",
   "input.skills.label": "Skills",
   "input.skills.placeholder": "Skills",
   "input.ssn.label": "Social security number or coordination number",
@@ -228,6 +233,10 @@
   "page.not.found.error.title": "404 - Page Not Found",
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
+  "sign.for.job.form.submit.button": "Sign",
+  "sign.for.job.form.terms.section": "Terms of employment",
+  "sign.for.job.modal.button": "Sign",
+  "sign.for.job.modal.title": "You are a star! The job is yours if you want it",
   "skill.proficiency.basic": "Basic knowledge",
   "skill.proficiency.beginner": "Beginner",
   "skill.proficiency.expert": "Expert",
