--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "applications.title": "Just Arrived",
+  "apply.for.job.form.message.section": "Anything else you want us to know?",
   "apply.for.job.form.submit.button": "Apply",
   "apply.for.job.modal.button": "Apply",
   "apply.for.job.modal.title": "Anything else you want us to know?",
